--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "watch_folder": "D:\\Study\\LISA_PROJECT\\FileIntegrityChecker\\tests",
+  "watch_folder": "",
   "verify_interval": 1800, 
   "webhook_url": null,
   "secret_key": "Lisacutie",
