polished_readme_file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-# Minimal working setup
 watchdog
 requests
-Pillow>=9.0.0,<11.0.0
-
-reportlab==4.0.4
-
-pip install matplotlib pillow reportlab
-
-pip install seaborn
+Pillow>=9.0.0
+reportlab>=4.0.0
+matplotlib
+seaborn
